--- a/src/Components/Category/styles.css
+++ b/src/Components/Category/styles.css
@@ -1,32 +1,15 @@
 .categorySelect {
-    vertical-align: middle;
-    height: 2.2em;
-    margin: 2px;
-    padding: 0.3em 0.6em;
-    background: white;
-    border: 1px solid #aaaaaa;
-    border-radius: 0.3em;
+
     box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.3), 0 1px 2px rgba(0, 0, 0, 0.4);
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 0.85em;
-    font-weight: normal;
-    text-shadow: 0 1px 0 white;
+    font-weight: normal
 }
 .categorySelect:hover {
     box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3), 0 2px 3px rgba(0, 0, 0, 0.4);
 }
 
 .inputSelect{
-    width: 200px;
-    min-height: 25px;
-    padding: 0.3em 0.6em;
-    margin: 5px;
-    border: 1px solid #aaaaaa;
-    border-radius: 0.3em;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.3), 0 1px 2px rgba(0, 0, 0, 0.4);
-    font-size: 0.85em;
-    font-weight: normal;
     text-shadow: 0 1px 0 white;
 }
 .inputSelect:hover {
@@ -43,11 +26,3 @@
     background: #d5d5e7;
 }
 
-.formContainer {
-    display: flex;
-    width: 800px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 10px;
-}
