--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -1,9 +1,4 @@
-.main {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
-}
